# g1r

./: Cargo.toml  README.md  config.toml  proxies.txt
src/: main.rs
src/mods/: ascii.rs  sasl.rs  sed.rs
src/modules/: ai.rs  aicode.rs  invade copy.rs  invade.rs  invaders.rs  kill.rs  ping.rs
